--- a/TFANet Mobile/ThreadView.xib
+++ b/TFANet Mobile/ThreadView.xib
@@ -152,7 +152,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 126}, {694, 12}}</string>
 								<reference key="NSSuperview" ref="282531858"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="358836656">
 									<int key="NSColorSpace">3</int>
@@ -286,14 +285,6 @@
 			<array class="NSMutableArray" key="connectionRecords">
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">discussionSummary</string>
-						<reference key="source" ref="901188392"/>
-						<reference key="destination" ref="124753202"/>
-					</object>
-					<int key="connectionID">49</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">icon</string>
 						<reference key="source" ref="901188392"/>
 						<reference key="destination" ref="334369476"/>
@@ -326,11 +317,19 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">discussionTitle</string>
+						<string key="label">threadSummary</string>
+						<reference key="source" ref="901188392"/>
+						<reference key="destination" ref="124753202"/>
+					</object>
+					<int key="connectionID">57</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">threadTitle</string>
 						<reference key="source" ref="901188392"/>
 						<reference key="destination" ref="625201363"/>
 					</object>
-					<int key="connectionID">56</int>
+					<int key="connectionID">58</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -436,7 +435,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">56</int>
+			<int key="maxID">58</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
